Ensure auth response is closed